# agentic-commerce-protocol

./: README.md  go.mod  regen_openapi.py
codegen/: codegen.toml  generated_files.json  input.ron  openapi.agentic_checkout_webhook.yaml  openapi.delegate_payment.yaml
csharp/: .gitignore  Agentic.Commerce.Protocol.csproj  Placeholder.cs  README.md
go/: README.md  models.go  version.go
java/: README.md  build.gradle  deploy.gradle  gradle.properties  settings.gradle
kotlin/: .gitignore  README.md  build.gradle  (+3 more)
python/: .gitignore  README.md  pyproject.toml
python/agentic_commerce_protocol/: __init__.py  types.py
python/agentic_commerce_protocol/models/: address.py  allowance.py  allowance_reason.py  buyer.py  card_funding_type.py  card_number_type.py  check_performed_type.py  checkout_session.py  checkout_session_complete_request.py  checkout_session_create_request.py  checkout_session_status.py  checkout_session_update_request.py  common.py  content_type.py  delegate_payment_request.py  delegate_payment_response.py  error.py  error_code.py  error_type.py  event_data_order.py  fulfillment_option.py  fulfillment_option_digital.py  fulfillment_option_shipping.py  item.py  line_item.py  link.py  link_type.py  message.py  message_error.py  message_info.py  order.py  payment_data.py  payment_method_card.py  payment_method_type.py  payment_provider.py  payment_provider_type.py  refund.py  refund_type.py  risk_signal.py  risk_signal_action.py  (+6 more)
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/src/models/: address.rs  allowance.rs  allowance_reason.rs  buyer.rs  card_funding_type.rs  card_number_type.rs  check_performed_type.rs  checkout_session.rs  checkout_session_complete_request.rs  checkout_session_create_request.rs  checkout_session_status.rs  checkout_session_update_request.rs  content_type.rs  delegate_payment_request.rs  delegate_payment_response.rs  error.rs  error_code.rs  error_type.rs  event_data_order.rs  fulfillment_option.rs  fulfillment_option_digital.rs  fulfillment_option_shipping.rs  item.rs  line_item.rs  link.rs  link_type.rs  message.rs  message_error.rs  message_info.rs  mod.rs  order.rs  payment_data.rs  payment_method_card.rs  payment_method_type.rs  payment_provider.rs  payment_provider_type.rs  refund.rs  refund_type.rs  risk_signal.rs  risk_signal_action.rs  (+6 more)
(+333 files in other folders)
