[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-commerce-protocol"
version = "0.1.6"
description = "Type definitions for the Agentic Commerce Protocol specification"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Svix" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["agentic-commerce", "protocol", "types", "openai", "stripe"]
dependencies = ["pydantic>=2.11"]


[project.urls]
Homepage = "https://github.com/svix/agentic-commerce-protocol"
Documentation = "https://developers.openai.com/commerce/guides/get-started"
Repository = "https://github.com/svix/agentic-commerce-protocol"


[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_commerce_protocol*"]
