[package]
name = "agentic-commerce-protocol"
version = "0.1.3"
edition = "2021"
authors = ["Svix"]
description = "Type definitions for the Agentic Commerce Protocol specification"
license = "MIT"
repository = "https://github.com/svix/agentic-commerce-protocol"
homepage = "https://developers.openai.com/commerce/guides/get-started"
keywords = ["agentic-commerce", "protocol", "types", "openai", "stripe"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]

[dev-dependencies]

